# cocos-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.en.md  README.md  install.sh  pyproject.toml  requirements.txt  run.sh  server.py
.github/workflows/: release.yml  test.yml
cocos/: __init__.py  asserts.py  build.py  composites.py  errors.py  gen_asset.py  interact.py  make_transparent.py  meta_util.py  project.py  scene_builder.py  screenshot.py  types.py  uuid_util.py
cocos/project/: __init__.py  animation.py  assets.py  atlas.py  gen_image.py  installs.py  physics_material.py  post_build_patches.py  skeletal.py  tiled.py  ui_tokens.py
cocos/scaffolds/: __init__.py  audio.py  camera_follow.py  enemy.py  game_loop.py  input.py  player.py  score.py  spawner.py  ui_screen.py
cocos/scene_builder/: __init__.py  _helpers.py  animation_presets.py  batch.py  media.py  modules.py  physics.py  physics_3d.py  prefab.py  rendering.py  responsive.py  styled_text.py  ui.py  ui_lint.py  ui_patterns.py
cocos/tools/: __init__.py  build.py  composites.py  core.py  interact.py  media.py  physics_3d.py  physics_ui.py  rendering_3d.py  scaffolds.py  scene.py  ui_patterns.py
docs/: DESIGN_NOTES.en.md  DESIGN_NOTES.md  dogfood-flappy-report.en.md  dogfood-flappy-report.md
examples/breakout/: build_breakout.py
examples/click-counter/: build_click_counter.py
examples/flappy-bird/: build_flappy.py
examples/flappy-bird/scripts/: Bird.ts  GameHub.ts  GameManager.ts  Ground.ts  Pipe.ts  PipeSpawner.ts
scripts/: RELEASE_CHECKLIST.md  build_binary.sh  push_mirrors.sh  verify_binary.py
tests/: test_asserts.py  test_build.py  test_composites.py  test_errors.py  test_friction_reducers.py  test_gen_asset.py  test_interact.py  test_make_transparent.py  test_meta.py  test_new_features.py  test_perf_optimizations.py  test_physics_3d.py  test_post_build_patches.py  test_prefab_save.py  test_project.py  test_project_assets.py  test_publish_features.py  test_rendering_3d.py  test_responsive.py  test_scaffolds.py  test_scaffolds_audio.py  test_scaffolds_camera_follow.py  test_scaffolds_enemy.py  test_scaffolds_game_loop.py  test_scaffolds_player.py  test_scaffolds_spawner.py  test_scaffolds_ui_screen.py  test_scene_builder.py  test_step3_polish.py  test_styled_text.py  test_tools_registration.py  test_types.py  test_ui_batch4.py  test_ui_batch5.py  test_ui_lint_more.py  test_ui_patterns.py  test_ui_tokens.py  test_uuid.py  test_visual_feedback.py
